adicionado estrutura do projeto

--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -21,21 +21,78 @@
 
     <!-- Cabeçalho -->
 
-   
+    <header>
+        <div class="container_header">
+            <div>
+                <h1>THE FUTURE IS FEMALE CODERS</h1>
+                <a class="header_button">SAIBA MAIS</a>
+            </div>
+
+            <div>
+                <img src="img/header_maravilhosa.jpg" alt="header-photo" class="header-photo">
+            </div>
+        </div>
+    </header>
 
     <!-- Secao Maravilhosa -->
 
-   
+    <section class="maravilhosa">
+        <div class="container_maravilhosa">
+            <div class="container_suahistoria">
+                <img src="img/perfil_maravilhosa.jpg" alt="" class="person">
+            </div>
+            <div class="suahistoria_texto">
+                <h2>Sua Historia</h2>
+                <p class="suahistoria_paragrafo"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
+                <p class="suahistoria_paragrafo">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum."
+                </p>
+                <a href="" class="suahistoria_autora"></a>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="autora">
+            <h2 class="autora_titulo">Sobre a autora</h2>
+            <div class="autora_sobre">
+                <img class="autora_imagem" src="img/perfil_maravilhosa.jpg" alt="">
+                <div>
+                    <h3>Graziele Ribeiro Santos</h3>
+                    <p>
+
+                    </p>
+                    <p>
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
+    <!-- AUTORA -->
 
-   <!-- AUTORA -->
-   
 
 
     <!-- Footer -->
 
-   
+
 
 
 
