added style and responsivity with media query

--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -20,79 +20,132 @@
     </nav>
 
     <!-- Cabeçalho -->
-
-    <header>
+    <header class="header">
         <div class="container_header">
-            <div>
-                <h1>THE FUTURE IS FEMALE CODERS</h1>
-                <a class="header_button">SAIBA MAIS</a>
+            <div class="header_titulo">
+                <h1>The future is female coders.</h1>
+                <a class="header_button">Saiba mais</a>
             </div>
-
             <div>
-                <img src="img/header_maravilhosa.jpg" alt="header-photo" class="header-photo">
+                <div>
+                    <img class="header_maravilhosa_img" src="./img/header_maravilhosa.jpg" alt="" />
+                </div>
             </div>
         </div>
     </header>
+
 
     <!-- Secao Maravilhosa -->
 
     <section class="maravilhosa">
         <div class="container_maravilhosa">
-            <div class="container_suahistoria">
-                <img src="img/perfil_maravilhosa.jpg" alt="" class="person">
+            <div>
+                <h2 class="maravilhosa_titulo">Marie Curie</h2>
             </div>
-            <div class="suahistoria_texto">
-                <h2>Sua Historia</h2>
-                <p class="suahistoria_paragrafo"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                </p>
-                <p class="suahistoria_paragrafo">
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum."
-                </p>
-                <a href="" class="suahistoria_autora"></a>
+            <div class="maravilhosa_boxBorder">
+                <p class="boxBorder_texto">“Marie Curie foi uma gênia da ciência quando as oportunidades para as
+                    mulheres, especialmente na academia, eram escassas”.</p>
             </div>
-        </div>
-    </section>
 
-    <section>
-        <div class="autora">
-            <h2 class="autora_titulo">Sobre a autora</h2>
-            <div class="autora_sobre">
-                <img class="autora_imagem" src="img/perfil_maravilhosa.jpg" alt="">
-                <div>
-                    <h3>Graziele Ribeiro Santos</h3>
-                    <p>
-
+            <div class="container_suaHistoria">
+                <img class="suaHistoria_imagem" src="./img/37583mariecuriecolor.jpg" alt="">
+                <div class="suaHistoria_texto">
+                    <h2 class="suaHistoria_titulo">Sua história</h2>
+                    <p class="suaHistoria_paragrafo">Apesar de ter terminado o colegial quando tinha
+                        apenas 15 anos, Marie não conseguiu estudar na Universidade de Varsóvia, na Polônia, porque a
+                        instituição não aceitava estudantes do sexo feminino. Aos 17 anos, ela se mudou para Paris para
+                        estudar física na Universidade Paris-Sorbonne. Marie optou por morar em um apartamento péssimo,
+                        mas
+                        que era próximo da universidade, de forma que pudesse ter mais tempo para estudar. Ela vivia sem
+                        dinheiro, e por muito tempo sobreviveu de pão e chá. No fim, Marie colheu os frutos do esforço:
+                        ela
+                        foi uma das melhores alunas de sua turma, recebeu o diploma em física em 1893 e ganhou uma bolsa
+                        para estudar matemática na mesma instituição.Ao estudar a descoberta da radioatividade
+                        espontânea,
+                        feita por Henri Becquerel, Marie e seu marido Pierre desenvolveram a teoria da radioatividade. A
+                        cientista descobriu que é possível medir a força da radiação do urânio; que a intensidade da
+                        radiação é proporcional à quantidade de urânio ou tório no composto e que a habilidade de emitir
+                        radiação não depende da disposição dos átomos em uma molécula e sim com o interior do próprio
+                        átomo.
                     </p>
-                    <p>
-                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    <p class="suaHistoria_paragrafo">Quando percebeu que alguns compostos tinham mais radiação do que o
+                        urânio, Marie sugeriu a existência de outro elemento com mais radiação do que o urânio e o
+                        tório. A cientista estava
+                        certa:
+                        Em 1898, ela e Pierre descobriram dois novos elementos radioativos, o rádio (900 vezes mais
+                        radioativo que o urânio) e o polônio (400 vezes mais radioativo que o urânio), cujo nome é uma
+                        homenagem à Polônia, país de origem de Marie.Em 1903, Marie e Pierre dividiram o Prêmio Nobel de
+                        Física com Henri Becquerel pela descoberta da radioatividade e, em 1911, a cientista foi
+                        agraciada
+                        com o Prêmio Nobel de Química pela descoberta e pelos estudos em torno dos elementos rádio e
+                        polônio. Ela foi a primeira pessoa e única mulher a ter ganhado o Nobel duas vezes em áreas
+                        distintas.</p>
 
-                    </p>
+                    <p class="suaHistoria_paragrafo">A descoberta do rádio e do polônio colaborou para o desenvolvimento dos aparelhos de raio-X.
+                        Durante a Primeira Guerra Mundial, Marie foi a campo levando aparelhos portáteis de raio-X para
+                        ajudar nos cuidados dos soldados feridos.</p>
                 </div>
-
             </div>
+
         </div>
     </section>
+
 
 
     <!-- AUTORA -->
+    <section>
+        <div class="autora">
+            <img src="img/foto.PNG" alt="" class="autora__photo">
+            <div>
+                <h2>Sobre a autora</h2>
+                <h3 class="autora_title">Graziele Ribeiro Santos</h3>
+                <div class="autora_sobre">
+                    <p>
+                        Nativa da engenharia química descobrindo uma nova profissão na área de tecnologia,
+                        desenvolvedora front-end em formação! Nordestina com orgulho, sou curiosa, determinada e estou
+                        sempre em busca de conhecimento. Amo café, plantinhas, bordar, desenhar e aprender idiomas.
+
+                        Em 2021, dei meu primeiro passo e comecei a estudar programação através de cursos onlines
+                        gratuitos, estou aprendendo cada vez mais sobre esse mundo incrível de desenvolvimento e já já
+                        estarei oficialmente no mercado tech!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+        </div>
+    </section>
 
 
 
     <!-- Footer -->
 
+    <footer>
+        <div class="social">
+            <ul>
+                <li><a href="#" target="_blank">Home</a></li>
+                <li><a href="http://www.reprograma.com.br/" target="_blank">Conheça a {reprograma} </a></li>
+            </ul>
+            <img src="./img/logo-white.png" alt="">
 
+            <div class="social_media">
+
+                <a href="https://www.instagram.com/graziribeiros/" target="_blank">
+                    <img src="./img/icon-instagram.png" alt="Ícone do Instagram">
+                </a>
+
+
+                <a href="https://www.linkedin.com/in/grazieleribeiros/" target="_blank">
+                    <img src="./img/icon-linkedin.png" alt="Ícone do LinkedIn">
+                </a>
+            </div>
+        </div>
+        <div class="footer_cc">
+            <p>Creative Commons 2021 | Feito com amor por Graziele </p>
+        </div>
+
+    </footer>
 
 
 
